--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,10 @@ h1 {
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
 }
 
+.recipe strong {
+  color: #21c45d;
+}
+
 footer {
   text-align: center;
   font-size: 13px;
