--- a/src/style.css
+++ b/src/style.css
@@ -17,14 +17,30 @@ h1 {
   font-weight: 800;
   font-size: 40px;
   line-height: 1.5;
-  color: black;
+  color: #21c45d;
+}
+
+.form-container {
+  background-color: #fff;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 15px 20px;
 }
 
 .form {
   padding: 30px;
   border-radius: 20px;
   display: flex;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+}
+
+.hint {
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 5px;
+  opacity: 0.6;
+  font-style: italic;
 }
 
 .instructions {
@@ -45,6 +61,25 @@ h1 {
   padding: 14px 24px;
   width: 150px;
   font-size: 16px;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+.hidden {
+  display: none;
 }
 
 .recipe {
