--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: white;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Inter", serif;
 }
 
 .container {
@@ -12,11 +12,18 @@ header {
   margin-bottom: 30px;
 }
 
+h2 {
+  text-align: center;
+  font-size: 16px;
+  line-height: 27px;
+  font-weight: 400;
+}
+
 h1 {
   text-align: center;
   font-weight: 800;
-  font-size: 40px;
-  line-height: 1.5;
+  font-size: 45px;
+  line-height: 54px;
   color: #21c45d;
 }
 
